test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/allowed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - FOO
