test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: mpol-allow-specific-values
spec:
  policyRefs:
    - name: mpol-allow-specific-values
      kind: MutatingPolicy
  images:
  - nginx:latest
  - busybox:latest
  allowedValues:
  - FOO
  - BAR
