test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/non-allowed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-allowed-pod
  labels:
    app: test
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - FOO
