test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/allowed-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  labels:
    app: test
    extraCapsAllowed: "true"
spec:
  containers:
  - name: nginx
    image: nginx:latest
