test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/non-allowed-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-allowed-pod
  labels:
    app: test
    extraCapsAllowed: "false"
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
