test/conformance/chainsaw/mutating-policies/exceptions/allow-specific-values/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-allow-specific-values
spec:
  concurrent: false
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mpol-allow-specific-values
  - name: create pod with allowed value and allowed image
    try:
    - sleep:
        duration: 10s
    - create:
        file: allowed-pod.yaml
    - assert:
        file: allowed-pod-assert.yaml
  - name: create pod with non-allowed value
    try:
    - create:
        file: non-allowed-pod.yaml
    - assert:
        file: non-allowed-pod-assert.yaml
